<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<url>http://maven.apache.org</url>
	<packaging>jar</packaging>
	<groupId>com.voyager</groupId>
	<artifactId>enterprise-impl</artifactId>
 	<version>1.0-SNAPSHOT</version>

	<properties>
		<!-- Compile Env -->
    	<maven.compiler.source>11</maven.compiler.source>
     	<maven.compiler.target>11</maven.compiler.target>
     	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     	<mainClass>com.voyager.Main</mainClass>
     	<!-- dependencies Env -->
     	<resilience4jVersion>2.1.0</resilience4jVersion>
     	<ioEbeanVersion>13.22.0</ioEbeanVersion>
  	</properties>

 	<repositories>
 		<!-- Default Maven Central -->
        <repository>
	        <id>central</id>
	        <url>https://repo.maven.apache.org/maven2</url>
	    </repository>
	    <!-- LOCAL -->
	    <!-- mvn install:install-file -Dfile=./enterprise-1.0.6-ALPHA.jar -DgroupId=com.voyager -DartifactId=enterprise -Dversion=1.0.6-ALPHA -Dpackaging=jar -DlocalRepositoryPath=./lib-->
		<repository>
			<id>local-repository</id>
        	<url>file:///${project.basedir}/lib</url>
    	</repository>
    	<!-- REGISTRY Github -->
        <repository>
			<id>github</id>
      		<name>GitHub OWNER Apache Maven Packages</name>
      		<url>https://maven.pkg.github.com/MyEnterprise/enterprise</url>
      		<releases>
        		<enabled>true</enabled>
      		</releases>
      		<snapshots>
        		<enabled>true</enabled>
      		</snapshots>
        </repository>
  	</repositories>

  	<dependencies>

  		<!--  API   -->
    	<dependency>
		  <groupId>com.voyager</groupId>
		  <artifactId>enterprise</artifactId>
		  <version>1.0.9-ALPHA</version>
		  <scope>compile</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/io.ebean/ebean -->
		<dependency>
		    <groupId>io.ebean</groupId>
		    <artifactId>ebean</artifactId>
		    <version>${ioEbeanVersion}</version>
		    <scope>compile</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.6</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/io.ebean/ebean-datasource -->
		<dependency>
		    <groupId>io.ebean</groupId>
		    <artifactId>ebean-datasource</artifactId>
		    <version>8.7</version>
		    <scope>compile</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/io.ebean/ebean-migration -->
		<dependency>
		    <groupId>io.ebean</groupId>
		    <artifactId>ebean-migration</artifactId>
		    <version>13.9.0</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/io.ebean/jakarta-persistence-api -->
		<dependency>
		    <groupId>io.ebean</groupId>
		    <artifactId>jakarta-persistence-api</artifactId>
		    <version>3.0</version>
		    <scope>compile</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/io.ebean/ebean-platform-all -->
		<dependency>
		    <groupId>io.ebean</groupId>
		    <artifactId>ebean-platform-all</artifactId>
		    <version>${ioEbeanVersion}</version>
		    <scope>compile</scope>
		</dependency>

		<dependency>
		    <groupId>io.ebean</groupId>
		    <artifactId>ebean-platform-postgres</artifactId>
		    <version>${ioEbeanVersion}</version>
		    <scope>compile</scope>
		</dependency>

		<dependency>
		    <groupId>io.ebean</groupId>
		    <artifactId>ebean-postgres</artifactId>
		    <version>${ioEbeanVersion}</version>
		    <scope>compile</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/io.ebean/ebean-ddl-generator -->		
		<dependency>
		    <groupId>io.ebean</groupId>
		    <artifactId>ebean-ddl-generator</artifactId>
		    <version>${ioEbeanVersion}-jakarta</version>
		    <scope>compile</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
		<dependency>
		    <groupId>org.postgresql</groupId>
		    <artifactId>postgresql</artifactId>
		    <version>42.6.0</version>
		    <scope>compile</scope>
		</dependency>

		<dependency>
		    <groupId>com.h2database</groupId>
		    <artifactId>h2</artifactId>
		    <version>2.1.214</version>
		    <scope>compile</scope>
		</dependency>

		<dependency>
		    <groupId>io.ebean</groupId>
		    <artifactId>persistence-api</artifactId>
		    <version>3.0</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.yaml/snakeyaml -->
		<dependency>
		    <groupId>org.yaml</groupId>
		    <artifactId>snakeyaml</artifactId>
		    <version>2.2</version>
		</dependency>

  	</dependencies>
<!-- mvn assembly:assembly -->
	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
        <testSourceDirectory>src/test/java</testSourceDirectory>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>
        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
            </testResource>
        </testResources>
	    <plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>${mainClass}</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
	            <groupId>io.ebean</groupId>
	            <artifactId>ebean-maven-plugin</artifactId>
	            <version>13.22.0</version> <!-- Use a versão mais recente disponível -->
	            <executions>
	                <execution>
	                    <id>main</id>
	                    <phase>process-classes</phase>
	                    <goals>
	                        <goal>enhance</goal>
	                    </goals>
	                </execution>
	            </executions>
	        </plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>${mainClass}</mainClass>
						</manifest>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
				<executions>
	                <execution>
	                    <id>main</id>
	                    <phase>process-classes</phase>
	                    <goals>
	                        <goal>assembly</goal>
	                    </goals>
	                </execution>
	            </executions>
			</plugin>
	    </plugins>
	</build>
</project>


